# ipum_lab1

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  app.py  dockerfile  inference.py  main.py  model.joblib  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
api/models/: iris.py
tests/: test_settings.py
